fixed nav overlap

--- a/style.css
+++ b/style.css
@@ -73,32 +73,32 @@ header {
     background-color:black;
     text-align: center;
     padding-top: 10px;
-
 }
+
 .banner img {
     width: 40%;
 }
-
-/*header .navigation li {
-    justify-content: flex-end;
-}*/
 
 nav ul {
     list-style: none;
     display: flex;
     justify-content: center;
     list-style-type: none;
-
-    /*align-content: center;*/
-    /*justify-content: flex-end;*/
 }
 
-nav ul li {
+.navigation ul li {
+    z-index: 2;
+    text-transform: uppercase;
     display: inline-block;
     background-color: black;
     position: relative;
-    overflow: hidden;
-    margin: 0 8%;
+    overflow: visible;
+    margin: 0 6%;
+}
+
+.navigation a {
+    color: white;
+    text-decoration: none;
 }
 
 .hero {
@@ -112,14 +112,16 @@ nav ul li {
     background-repeat: no-repeat;
     text-align:center;
     position:relative;
-    top: 80px;
     min-width: 100%;
     min-height: 50%;
-    /*margin-top:119px;*/
-    /*display: block;*/
     margin: 30px auto;
-    padding-bottom: 50px;;
+    padding-top: 20%;
+    padding-bottom: 50px;
     line-height: 3em;
+}
+
+.hero p {
+    text-transform: uppercase;
 }
 
 h1, h3 {
@@ -127,10 +129,13 @@ h1, h3 {
     width: 100%;
     margin: 1em auto;
     text-shadow: 2px 2px 5px #999;
+    word-wrap: break-word;
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 4em;
+    display: block;
+    white-space:nowrap;
 }
 
 h2 {
@@ -139,11 +144,18 @@ h2 {
 }
 
 h3 {
-    font-size: 50px;
+    font-size: 2em;
 }
+h4 {
+    box-shadow: 0px 0px 13px 17px rgba(0,0,0,0.13);
+    display: inline-block;
+}
+
 button {
     padding: 20px;
     font-size: 20px;
+    display: block;
+    align-content: center;
     text-transform: uppercase;
     background-color: #e2574c;
     color: white;
@@ -151,8 +163,9 @@ button {
     border-radius:50px;
     box-shadow: 2px 5px 10px black;
 }
-#about, #rentals, #location{
-    padding-top: 100px;
+
+#about, #rentals, #location {
+    padding-top: 8em;
 }
 
 /*article, #about, #rentals, #location {
@@ -164,7 +177,7 @@ button {
    align-content: center;
 }*/
 
-#about div img {
+.about-images img{
     min-width:95%;
     justify-content: space-between;
     align-content: center;
@@ -176,14 +189,29 @@ button {
 }
 
 @media all and (min-width:600px) {
-article {
+.banner, .navigation {
+    display: flex;
+    height: 56px;
+}
+
+/*button {
+    flex-flow: row wrap;
+}*/
+
+.navigation {
+    display: flex;
+    margin: 0 3em 0 auto;
+}
+
+#about p {
     color: blue;
 }
 
-#about div img {
+.about-images img {
     display: flex;
+    display: block;
     align-content: center;
-    text-align: center;
+    max-width: 30%;
 }
 
 #rentals p {
@@ -194,6 +222,7 @@ article {
 
 table {
     max-width: 50%;
+    display: inline-block;
 }
 
 .social {
@@ -269,23 +298,27 @@ a:hover {
 }
 
 footer {
-    text-align:center;
+    text-align: center;
     background-color: black;
     color: white;
-    min-width:100%;
+    min-width: 100%;
     padding: 80px 0px;
 }
 
 footer a {
     color: white;
 }
+
 .social-logos {
     list-style: none;
     display: flex;
     justify-content: center;
     padding: 10px;
     align-content: center;
-    margin: 1em auto;
+}
+
+.social-logos p {
+    margin: .5em;
 }
 
 .social-links {
@@ -299,8 +332,9 @@ flex-direction: row;*/
 /*align-content: right;
 clear:both;
 }
+*/
 
-    */
+
 .screen-reader-text {
    clip: rect(1px, 1px, 1px, 1px);
    position: absolute !important;
@@ -316,6 +350,6 @@ clear:both;
     left: 5px;
     top: 5px;
     width: auto;
-    z-index: 100000; /* above all content */
+    z-index: 100000; 
   }
 /*utility classes*/
